--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Rello Chat-live</title>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="icon" href="../static/rello.png">
+    
 </head>
 <body>
-<div th:if="${param.error}">
-    Invalid username and password.
+<div id="username-page">
+    <div class="username-page-container">
+        <h1 class="title">Enter Your Username and Password</h1>
+        <div th:if="${param.error}">
+            Invalid username and password.
+        </div>
+        <div th:if="${param.logout}">
+            You have been logged out.
+        </div>
+        <form th:action="@{/login}" method="post" id="usernameForm" name="usernameForm">
+            <div class="form-group">
+                <label>Username: <input type="text" name="username"/></label>
+            </div>
+            <div class="form-group">
+                <label>Password: <input type="password" name="password"/></label>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Sign In" />
+            </div>
+        </form>
+    </div>
 </div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-    <div>
-        <label>Username: <input type="text" name="username"/></label>
-    </div>
-    <div>
-        <label>Password: <input type="password" name="password"/></label>
-    </div>
-    <div>
-        <input type="submit" value="Sign In"/>
-    </div>
-</form>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js" integrity="sha512-1QvjE7BtotQjkq8PxLeF6P46gEpBRXuskzIVgjFpekzFVF4yjRgrQvTG1MTOJ3yQgvTteKAcO7DSZI92+u/yZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js" integrity="sha512-iKDtgDyTHjAitUDdLljGhenhPwrbBfqTKWO1mkhSFH3A7blITC9MhYon6SjnMhp4o0rADGw9yAC6EW4t5a4K3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
