login issue fix

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body>
 <div id="username-page">
     <div class="username-page-container">
-        <h1 class="title">Enter Your Username and Password</h1>
+        <h1 class="title">Rello Chat</h1>
         <div th:if="${param.error}">
             Invalid username and password.
         </div>
