--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
     <div id="username-page">
         <div class="username-page-container">
-            <h1 class="title">Enter Your Username</h1>
+            <h1 class="title">Enter Your Name</h1>
             <form id="usernameForm" name="usernameForm">
                 <div class="form-group">
                     <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
