Add auto-login feature and enhance UI elements; update health check response

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,8 @@
       <link rel="icon" href="../static/rello.png">
       
   </head>
-  <body>
+  <!-- Add a data attribute `data-login-username` containing the authenticated username (if any) -->
+  <body th:attr="data-login-username=${loginUsername}">
     <noscript>
       <h2>Sorry! Your browser doesn't support Javascript</h2>
     </noscript>
@@ -18,10 +19,10 @@
             <h1 class="title">Enter Your Name</h1>
             <form id="usernameForm" name="usernameForm">
                 <div class="form-group">
-                    <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+                    <input type="text" id="name" placeholder="Name" autocomplete="off" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="accent username-submit">Start Chatting</button>
+                    <button type="submit" class="accent username-submit">Chat</button>
                 </div>
             </form>
         </div>
